// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`writeManifest > snapshot: empty manifest 1`] = `
"// auto-generated by Solas

import type { Manifest } from '@jk2908/solas'

export const manifest = {} as const satisfies Manifest
"
`;

exports[`writeManifest > snapshot: multiple routes with dynamic params 1`] = `
"		// auto-generated by Solas

		import type { Manifest } from '@jk2908/solas'

		export const manifest = {
	'/': {
		__kind: '$P',
		__id: 'p_/',
		__path: '/',
		__params: [],
		__depth: 0,
		method: 'get',
		paths: {
			layouts: [],
			'401s': [],
			'403s': [],
			'404s': [],
			'500s': [],
			loaders: [],
			middlewares: [],
			page: null
		},
		prerender: false,
		dynamic: false,
		wildcard: false
	},
	'/about': {
		__kind: '$P',
		__id: 'p_/about',
		__path: '/about',
		__params: [],
		__depth: 1,
		method: 'get',
		paths: {
			layouts: [],
			'401s': [],
			'403s': [],
			'404s': [],
			'500s': [],
			loaders: [],
			middlewares: [],
			page: null
		},
		prerender: false,
		dynamic: false,
		wildcard: false
	},
	'/posts/:id': {
		__kind: '$P',
		__id: 'p_/posts/:id',
		__path: '/posts/:id',
		__params: ['id'],
		__depth: 2,
		method: 'get',
		paths: {
			layouts: [],
			'401s': [],
			'403s': [],
			'404s': [],
			'500s': [],
			loaders: [],
			middlewares: [],
			page: null
		},
		prerender: false,
		dynamic: true,
		wildcard: false
	}
} as const satisfies Manifest
	"
`;

exports[`writeManifest > snapshot: route with all path types 1`] = `
"		// auto-generated by Solas

		import type { Manifest } from '@jk2908/solas'

		export const manifest = {
	'/': {
		__kind: '$P',
		__id: 'p_/',
		__path: '/',
		__params: [],
		__depth: 0,
		method: 'get',
		paths: {
			layouts: ['../app/+layout'],
			'401s': [null],
			'403s': [null],
			'404s': ['../app/+404'],
			'500s': ['../app/+500'],
			loaders: ['../app/+loading'],
			middlewares: [null],
			page: '../app/+page'
		},
		prerender: false,
		dynamic: false,
		wildcard: false
	}
} as const satisfies Manifest
	"
`;

exports[`writeManifest > snapshot: single route 1`] = `
"		// auto-generated by Solas

		import type { Manifest } from '@jk2908/solas'

		export const manifest = {
	'/': {
		__kind: '$P',
		__id: 'p_/',
		__path: '/',
		__params: [],
		__depth: 0,
		method: 'get',
		paths: {
			layouts: [],
			'401s': [],
			'403s': [],
			'404s': [],
			'500s': [],
			loaders: [],
			middlewares: [],
			page: null
		},
		prerender: false,
		dynamic: false,
		wildcard: false
	}
} as const satisfies Manifest
	"
`;
